--- a/waxola-shop/package.json
+++ b/waxola-shop/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
+    "framer-motion": "^12.6.2",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.0",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "tailwindcss": "^4.0.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
