--- a/waxola-shop/package.json
+++ b/waxola-shop/package.json
@@ -11,16 +11,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
-    "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
     "framer-motion": "^12.6.2",
-    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.0",
-    "redux": "^5.0.1",
-    "tailwindcss": "^4.0.17"
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -28,10 +25,13 @@
     "@types/react-dom": "^19.0.4",
     "@types/react-redux": "^7.1.34",
     "@vitejs/plugin-react-swc": "^3.8.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.17",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
